@@ -33,6 +33,11 @@ version 1.7.5, in progress
   could cause strange errors
 - Fix for forecasts from equation systems displayed in the
   GUI program
+- Updates to some screenshots in the User's Guide
+- pca command: add --covariance option to base the analysis on
+  the covariance matrix instead of the correlation matrix
+- corr command: document the --uniform option and add it to
+  the GUI
 
 3/21/2008 version 1.7.4
 - Fix for ADF-GLS test with missing values
